finished adding research section and ported all the stuff from older site

--- a/content/publication/conference-paper/cite.bib
+++ b/content/publication/conference-paper/cite.bib
@@ -1,8 +1,17 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@inproceedings{10.1145/3398682.3399161,
+author = {Anand, Vaastav and Mehrotra, Puneet and Margo, Daniel and Seltzer, Margo},
+title = {Smooth Kronecker: Solving the Combing Problem in Kronecker Graphs},
+year = {2020},
+isbn = {9781450380218},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3398682.3399161},
+doi = {10.1145/3398682.3399161},
+abstract = {Graphs and graph-processing have become increasingly important. This has led to an explosion in the development of graph-processing systems, each of which is evaluated relative to its predecessors. In the absence of a large corpus of real-world graphs, synthetic generators provide an easy way to construct graphs of varying sizes. The most widely used generator is the Kronecker generator. Unfortunately, the Kronecker generator was not designed to produce graphs for benchmarking and when used in this fashion, it is problematic in two ways. First, the fraction of zero-degree vertices scales with the graph size, dramatically reducing the effective size of the connected graph. Second, the generator produces a vertex degree distribution not found in real world settings. We demonstrate these phenomena and present the Smooth Kronecker Generator, which remedies the vertex degree distribution problem without changing the statistical properties of the graph.},
+booktitle = {Proceedings of the 3rd Joint International Workshop on Graph Data Management Experiences &amp; Systems (GRADES) and Network Data Analytics (NDA)},
+articleno = {3},
+numpages = {10},
+keywords = {Kronecker graphs, benchmarking},
+location = {Portland, OR, USA},
+series = {GRADES-NDA'20}
 }
